test/compile-fail/resolution/type-existence/ambiguous-item/top.rhdl
struct a {
    b: d,
    c: d,
}
enum d {}
struct d {}
